# simpleproject

./: CMakeLists.txt  README.md
.circleci/: config.yml
main/: main.cpp
src/: foo.cpp  foo.h
tests/unit_tests/: CMakeLists.txt  SomeTest.cpp  SomeTests.cpp
